# DGTOTP-TLS

./: CMakeLists.txt  INSTALL.md  README.md
TLS-test/: Makefile  client  client.c  server  server.c  server.crt  server.key  verifier  verifier.c
include/: ChameleonHash.h  DGTOTP_PRF.h  Member.h  MerkleTrees.h  Parameter.h  RA.h  TOTP.h  Verifier.h
src/: ChameleonHash.cpp  DGTOTP_PRF.cpp  Member.cpp  MerkleTrees.cpp  Parameter.cpp  RA.cpp  TOTP.cpp  Verifier.cpp  main.cpp
